update travis and AWS Dockerrun

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,10 @@ deploy:
   edge: true
   provider: elasticbeanstalk
   region: "us-east-1"
-  app: "docker-react"
-  env: "DockerReact-env"
+  app: "multi-docker"
+  env: "MultiDocker-env"
   bucket_name: "elasticbeanstalk-us-east-1-360803683024"
-  bucket_path: "docker-react"
+  bucket_path: "multi-docker"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
