remove deploy to AWS remove dependence on services

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,16 +20,16 @@ after_success:
   - docker push petersenrex/multi-server
   - docker push petersenrex/multi-worker  
 
-deploy:
-  edge: true
-  provider: elasticbeanstalk
-  region: "us-east-1"
-  app: "multi-docker"
-  env: "MultiDocker-env"
-  bucket_name: "elasticbeanstalk-us-east-1-360803683024"
-  bucket_path: "multi-docker"
-  on:
-    branch: master
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: "$AWS_SECRET_KEY"
-
+#deploy:
+#  edge: true
+#  provider: elasticbeanstalk
+#  region: "us-east-1"
+#  app: "multi-docker"
+#  env: "MultiDocker-env"
+#  bucket_name: "elasticbeanstalk-us-east-1-360803683024"
+#  bucket_path: "multi-docker"
+#  on:
+#    branch: master
+#  access_key_id: $AWS_ACCESS_KEY
+#  secret_access_key: "$AWS_SECRET_KEY"
+#
